# lightwand

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
docs/: notebook.md
hardware/freecad/: SW-R3-1A-A-1-2.FCStd  dowel.FCStd  pcb_mount.FCStd  wand_handle.20240331-213725.FCBak  wand_handle.FCStd
hardware/kicad/: fp-lib-table  light_wand.kicad_pcb  light_wand.kicad_pro  light_wand.kicad_sch  power_supply.kicad_sch  sym-lib-table
hardware/kicad/light_wand_footprints.pretty/: ADXL343_Breakout_ThruHole.kicad_mod
hardware/light_wand/: #auto_saved_files#  fp-lib-table  light_wand.kicad_pcb  light_wand.kicad_pro  light_wand.kicad_sch  light_wand_library.kicad_sym  power_supply.kicad_sch  sym-lib-table  ~light_wand.kicad_pcb.lck
hardware/light_wand/light_wand_footprints.pretty/: 74438357022_4.1x3.1mm_Inductor.kicad_mod  HSNT-6.kicad_mod  Inductor_SMD_L_7.3x7.3_H3.5.kicad_mod  SOP-8-EP_3.9x4.9mm_P1.27mm.kicad_mod
inc/: ADXL343.h  alphabet.h  neopixels.h  transform.h
scripts/: accel_data.csv  accelerometer_tests.py  generate_alphabet.py
scripts/alphabet_source/: Readme.md
src/: ADXL343.c  accel_data_main.c  main.c  neopixels.c  transform.c
